@@ -1,3 +1,6 @@
+2009-02-12:
+    Chaged utils a bit so that it can safely be imported with a *
+
 ===============================================================================
 2009-01-14: GenX 2b5.1
 2008-12-11:
